# dbb_buffmngrs_handoff

./: .gitignore  README.rst  SConstruct  setup.cfg
bin.src/: hdfmgr  transd.py
dbb_buffer_mngr/: __init__.py  cleaner.py  command.py  endpoint.py  handoff.py  porter.py  scanner.py  schema.py  snapshot.py
doc/: conf.py  index.rst  manifest.yaml
doc/lsst.dbb.buffer.mngr/: index.rst
doc/lsst.dbb.buffmngrs.handoff/: get-started.rst  index.rst
etc/: config.yaml  syncd.yml  transd.yaml  transd.yml
python/lsst/dbb/buffer/mngr/: __init__.py  command.py  endpoint.py  handoff.py  schema.py
python/lsst/dbb/buffmngrs/handoff/: __init__.py  abcs.py  cli.py  declaratives.py  defaults.py  local.py  manager.py  messages.py  remote.py  schema.py  utils.py  validation.py
tests/: test_eraser.py  test_finder.py  test_mover.py  test_porter.py  test_scanner.py  test_wiper.py
