[metadata]
name = dbb_buffmngrs_handoff
description = Trasnfers files between two remote sites.
author = Rubin Observatory Data Management
url = https://github.com/lsst/dbb_buffmngrs_handoff
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir=
    =python
install_requires =
  pyyaml >=5.1
  sqlalchemy >= 1.03
  click >= 7.0
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0

[flake8]
max-line-length = 79
max-doc-length = 79
ignore = W503, E203, N802, N803, N806, N812, N815, N816
exclude =
  bin,
  doc,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503
